tests/ui/nsvalue_f32_not_eq.stderr
error[E0277]: the trait bound `f32: Eq` is not satisfied
  --> ui/nsvalue_f32_not_eq.rs:11:5
   |
11 |     needs_eq::<NSValue<f32>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Eq` is not implemented for `f32`
   |
   = note: required because of the requirements on the impl of `Eq` for `NSValue<f32>`
note: required by a bound in `needs_eq`
  --> ui/nsvalue_f32_not_eq.rs:5:16
   |
5  | fn needs_eq<T: Eq>() {}
   |                ^^ required by this bound in `needs_eq`
